ESSArch_PP/frontend/static/frontend/styles/modules/reception.scss
@import 'colors';
@import 'mixins';

.content-wrapper {
    display: flex;
    flex-direction: column;
    width: 100%;
    position: relative;
}
.helper {
    background: white;
    border: 1px solid black;
    padding: 3px;
}
.hover {
    background-color: #ddddff;
}
.hover-up {
    border-top: 1px solid red;
}
.hover-down {
    border-bottom: 1px solid red;
}
.hover-middle {
    text-decoration: line-through;
}
.glyphicon-triangle-bottom {
    cursor: pointer;
}
.column-label {
    margin: auto;
}
.content-wrapper > div {
    margin-bottom: 10px;
    margin-left: 5px;
}
@media screen and (max-width: 1200px) {
    .content-wrapper > div {
        margin-left: 0;
    }
}
.search-prepare-wrapper {
    display: flex;
    flex-direction: row;
    font-weight: bold;
    flex-wrap: nowrap;
    align-items: stretch;
    position: relative;
    width: 100%;
    padding: 0 0 10px 0;
    .btn-info {
        margin-left: 10px;
        padding: 2px 12px;
    }
    .fa-refresh {
        position: absolute;
        top: 10px;
        right: 0px;
    }
}
.text-center {
    text-align: center;
    margin: auto;
}
.events-footer {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    height: 60px;
    margin: 5px;
    padding: 5px;
    .signature {
        width: 250px;
        height: 35px;
        margin-left: 5px;
        margin-right: 5px;
        resize: none;
    }
}
.events-form {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    width: 100%;
    margin-left: 10px;
}
.events-form .submit-button {
    height: 35px;
    margin-top: 25px;
}
.progress {
    height: 20px;
    width: 150px;
    margin: 0;
    background-color: #aaa;
    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.48);
}
.progress b {
    position: relative;
}
.column-label {
    cursor: pointer;
}
.clickable {
    cursor: pointer;
}
.select-sub-edit-eventlog-wrapper {
    @include container;
    position: relative;
}
.events-status-wrapper {
    @include container;
}
.event-view {
    margin: 5px;
    padding: 5px;
    .table {
        position: relative;
        overflow-x: auto;
    }
    .submit-button {
        margin-bottom: 5px;
    }
}
.items-per-page {
    width: 15%;
    min-width: 50px;
}
.select-view {
    margin: 5px;
    padding: 5px;
}
.select-view > .checkbox {
    height: 10px;
}
.select-view > .table>tbody>tr>td {
    padding-top: 0px;
    padding-bottom: 0px;
}
.lock-button  {
    padding: 0px 16px;
    width: auto;
}
.table-col {
    margin: 0;
}
.form-control {
    height: 26px;
    padding-left: 5px;
    padding-top: 0;
    padding-bottom: 0;
    font-size: 13px;
}
.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th {
    padding-top: 4px;
    padding-bottom: 8px;
    line-height: 1;
}
.tasks-list {
    padding: 10px;
}
.sub-select-view > select {
    margin-left: 20px;
    height: 30px;
}
.sub-select-profile {
    width: 25%;
}
.sub-select-agreement {
    width: 25%;
}
.sub-select-nationality {
    width: 10%;
}

.edit-view {
    border-color: $border-color;
    margin: 5px;
    padding: 5px;
    position: relative;
    .formly {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        padding: 5px;
        width: 100%;
    }
    .btn-danger {
        float: right;
    }
}
.eventlog-view {
    border-color: $border-color;
    display: flex;
    flex-direction: row;
    height: 70px;
    margin: 5px;
    padding: 5px;
    justify-content: space-between;
}
.eventlog-view .form-group {
    display: flex;
    flex-direction: column;
    width: 33%;
}
.eventlog-view .btn-info {
    float: right;
    margin-top: 10px;
}
.eventlog-view .checkbox {
    margin-top: 20px;
}
input[type="checkbox"] {
    transform:scale(1.2, 1.2);
}
.eventlog-view .submit-button {
    height: 40px;
}
.eventlog-form {
    display: flex;
    flex-direction: row;
    width: 100%;
    justify-content: flex-end;
    margin-left: 10px;
}
.validator-choices {
    border-bottom-style: solid;
    border-bottom-width: 1px;
    border-bottom-color: $border-color;
    .formly {
        display: flex;
        flex-direction: row;
        justify-content: flex-start;
        min-height: 70px;
        .formly-field {
            min-width: 105px;
            width: 10%;
        }
        select {
            width: 170px;
        }
    }
}

.control-label {
    font-size: 10px;
}

.formly-field-group {
    width: 100% !important;
}

.formly-field-group .formly-field {
    width: 15%;
}

.formly-field {
    width: 24%;
    margin: 5px;
}
.submit-button {
    margin-left: 5px;
}
.edit-view-tree {
    display: flex;
    flex-direction: row;
    width: 100%;
}
.edit-view-tree .formly {
    display: flex;
    flex-direction: row;
    width: 100%;
}
.edit-view-tree .formly-field {
    width: 75%;
    margin-left: 0;
}

.tree {
    width: 30%;
}
.add-node-form-wrapper {
    height: 50%;
}
.map-structure-editor {
    border-top-style: solid;
    border-color: $border-color;
}
.version-info-page {
    @include container(10px);
    margin-top: 10px;
}

